Fix overflow on login page

--- a/src/pages/LoginPage/LoginPage.scss
+++ b/src/pages/LoginPage/LoginPage.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
   padding: 2rem 3rem;
-  overflow-y: auto;
+  overflow: hidden;
   position: relative;
   display: flex;
   justify-content: center;
